--- a/app/design/adminhtml/default/default/template/googleshopping/captcha.phtml
+++ b/app/design/adminhtml/default/default/template/googleshopping/captcha.phtml
@@ -26,11 +26,12 @@
 ?>
 
 <?php if ($this->getGcontentCaptchaToken() && $this->getGcontentCaptchaUrl()): ?>
-<ul class="messages">
-    <li class="error-msg">
-        <ul>
-            <li><img src="<?php echo $this->getGcontentCaptchaUrl() ?>"> <input type="text" id="user_confirm"> <?php echo $this->getConfirmButtonHtml() ?></li>
-        </ul>
-    </li>
-</ul>
+    <ul class="messages">
+        <li class="error-msg">
+            <ul>
+                <li><img src="<?php echo $this->getGcontentCaptchaUrl() ?>"> <input type="text" id="user_confirm"> <?php echo $this->getConfirmButtonHtml() ?>
+                </li>
+            </ul>
+        </li>
+    </ul>
 <?php endif; ?>
