--- a/app/design/adminhtml/default/default/template/googleshopping/types/edit/select.phtml
+++ b/app/design/adminhtml/default/default/template/googleshopping/types/edit/select.phtml
@@ -27,16 +27,17 @@
 
 <select id="<?php echo $this->getId() ?>" name="<?php echo $this->getName() ?>" class="<?php echo $this->getClass() ?>" title="">
     <?php foreach ($this->getOptions() as $_value => $_option): ?>
-        <?php if (isset($_option['is_group'])): ?>
-            <?php if (isset($_option['is_close'])): ?>
-                </optgroup>
-            <?php else: ?>
-                <optgroup label="<?php echo $_option['label'] ?>" style="<?php echo isset($_option['style']) ? $_option['style'] : ''; ?>">
-            <?php endif; ?>
-        <?php else: ?>
-          <option value="<?php echo $_value ?>" style="<?php echo isset($_option['style']) ? $_option['style'] : ''; ?>">
-              <?php echo $_option['label'] ?>
-          </option>
+    <?php if (isset($_option['is_group'])): ?>
+    <?php if (isset($_option['is_close'])): ?>
+        </optgroup>
+    <?php else: ?>
+    <optgroup label="<?php echo $_option['label'] ?>" style="<?php echo isset($_option['style']) ? $_option['style'] : ''; ?>">
         <?php endif; ?>
-    <?php endforeach; ?>
+        <?php else: ?>
+            <option value="<?php echo $_value ?>" style="<?php echo isset($_option['style']) ? $_option['style'] : ''; ?>">
+                <?php echo $_option['label'] ?>
+            </option>
+        <?php
+        endif; ?>
+        <?php endforeach; ?>
 </select>
